# robusta-hmf

./: .gitignore  CLAUDE.md  PLAN.md  README.md  codebase-report.md  equinox-report.md  pyproject.toml
.claude/: bootstrap-state.json  settings.json
examples_paper/: w_quantiles.py
examples_paper/gaia_rvs/: analyse_bins.py  analyse_gaia.py  analysis_funcs.py  bins.py  collect.py  collect_outlier_spectra.py  compare_metrics.py  convert_air_to_vacuum.py  gaia_config.py  make_paper_figs.py  plot_bins.py  plot_hist_stack.py  plot_non_outliers.py  replot_outliers.py  rvs_plot_utils.py  save_source_ids.py  simple_read.py  summarise_bins.py  train_bins.py  training.py  umap_residuals.py
examples_paper/other/toy/: analyse_toy.py  gen_data.py  run_toy_gen_and_fits.py
examples_paper/toy/: analyse_toy.py  gen_data.py  make_paper_figs.py  r_pca.py  run_toy_gen_and_fits.py
notebooks/: trivial_demo.ipynb
paper/: main.tex  rhmf.bib
src/robusta_hmf/: __init__.py  convergence.py  frame.py  hmf.py  main.py  rotations.py  state.py
