[project]
name = "robusta-hmf"
dynamic = ["version"]
description = "Robust heteroskedastic matrix factorisation in JAX."
readme = "README.md"
authors = [
    { name = "Tom Hilder", email = "tom.hilder.dlhp@gmail.com" },
    { name = "David W. Hogg", email = "TODO@TODO.com" },
]
requires-python = ">=3.10"
dependencies = [
    "equinox>=0.13.0",
 "jax>=0.6.0",
 "optax>=0.2.0",
 "pandas>=2.3.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/robusta_hmf/py.typed"]
exclude = ["**/__pycache__/**"]

[tool.hatch.build.targets.sdist]
include = ["src/**", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/robusta_hmf"]

[tool.hatch.build.hooks.vcs]
version-file = "src/robusta_hmf/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 99 # Sorry PEP8 I'm a rebel

[dependency-groups]
dev = ["mypy>=1.18.0", "pytest>=8.4.0", "pytest-cov>=7.0.0"]
examples = [
    "astropy>=6.1.0",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.0",
    "mpl-drip>=1.0.5",
    "numpy>=2.2.6",
    "polars>=1.37.1",
    "scipy>=1.15.0",
    "tqdm>=4.67.0",
]
